Add a flag for attaching the wave file; refactor email sending into a separate function

--- a/callattendant/app.cfg.example
+++ b/callattendant/app.cfg.example
@@ -209,6 +209,8 @@ EMAIL_SERVER_USERNAME = 'user name to log into the SMTP server'
 EMAIL_SERVER_PASSWORD = 'password to log into the SMTP server'
 EMAIL_FROM = 'e-mail address to appear in the "From:" header'
 EMAIL_TO = 'e-mail address to send the voicemail notification to'
+# Set EMAIL_ATTACH to True to include the voicemail wave file with the notification email.
+EMAIL_ATTACH = False
 
 # GPIO_LED_..._PIN: These values are the GPIO pin numbers attached to the LED indicators
 # GPIO_LED_..._BRIGHTNESS: These values are a percentage of brightness for the LED indicators when on.
